# securityevent-forwarder

./: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  go.mod  go.sum  main.go  test.sh
.github/workflows/: scorecard.yml
snyk-webhook-api/: Cargo.toml  Dockerfile  test_data.json
snyk-webhook-api/migrations/2022-12-20-212335_create_snyk_events/: down.sql  up.sql
snyk-webhook-api/src/: crud.rs  lib.rs  main.rs  models.rs  schema.rs
trino/: .env.template  README.md
trino/etc/: kafka-configuration.properties  node.properties
trino/etc/catalog/: kafka.properties
trino/etc/kafka/: azure.trinoazureeventhub.json
