[package]
name = "snyk-webhook-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
diesel = { version = "2.0.2", features = ["chrono", "postgres", "serde_json"] }
chrono = { version = "0.4.23" }
serde = { version = "1.0.151"}
dotenvy = "0.15"